<resources>
    <string name="app_name">Movie</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="sign_up">Sign up</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_apple">Continue with Apple</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="logo">Logo</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="or_continue_with">or continue with</string>
    <string name="let_is_you_in">let is you in</string>
    <string name="let_s_you_in">Let’s you in</string>
    <string name="or">or</string>
    <string name="sign_in_with_password">Sign in with password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="back">Back</string>
    <string name="enter_your_email_to_reset_your_password">Enter your email to reset your password</string>
    <string name="continue_">Continue</string>
    <string name="code_has_been_send_to">Code has been send to</string>
    <string name="verify">Verify</string>
    <string name="resend_code_in">Resend code in</string>
    <string name="create_new_password">Create New Password</string>
    <string name="create_your_new_password">Create Your New Password</string>
    <string name="success">Success</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_account_is_ready">Your account is ready to use. You will be redirected to the Home page in a few seconds..</string>
    <string name="spin">spin</string>
    <string name="image_movie">Image Movie</string>
    <string name="play">Play</string>
    <string name="my_list">My List</string>
    <string name="search">Search</string>
    <string name="top_hits_anime">Top Hits Anime</string>
    <string name="see_all">See all</string>
    <string name="new_episode_releases">New Episode Releases</string>
    <string name="single_movie">Single Movie</string>
    <string name="series_movie">Series Movie</string>
    <string name="cartoons">Cartoons</string>
    <string name="tv_shows">TVShows</string>
    <string name="search_movie">Search ...</string>
    <string name="button_filter">Button filter</string>
    <string name="not_found">Not Found</string>
    <string name="sorry_the_keyword">Sorry, the keyword you entered could not be found. Try to check again or search with other keywords.</string>
    <string name="sort"><![CDATA[Sort & Filter]]></string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="sort_only">Sort</string>
    <string name="categories">Categories</string>
    <string name="region">Region</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="cast_video">Cast video</string>
    <string name="bookmark">Bookmark</string>
    <string name="share">Share</string>
    <string name="view_more">View more</string>
    <string name="less_more">Less more</string>
    <string name="comments">Comments</string>
    <string name="more_like_this">More Like This</string>
    <string name="avatar">Avatar</string>
    <string name="like">Like</string>
    <string name="_0">0</string>
    <string name="_2_days_ago">2 days ago</string>
    <string name="reply">Reply</string>
    <string name="add_comment">Add comment...</string>
    <string name="send">Send</string>
    <string name="more">More</string>
    <string name="episode">Episode</string>
    <string name="speed">Speed</string>
    <string name="volume">Volume</string>
    <string name="backward">Backward</string>
    <string name="forward">Forward</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="settings">Settings</string>
    <string name="timer">Timer</string>
    <string name="off">Off</string>
    <string name="_10_minutes">10 Minutes</string>
    <string name="_15_minutes">15 Minutes</string>
    <string name="_20_minutes">20 Minutes</string>
    <string name="_25_minutes">25 Minutes</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="_35_minutes">35 Minutes</string>
    <string name="_40_minutes">40 Minutes</string>
    <string name="_45_minutes">45 Minutes</string>
    <string name="_50_minutes">50 Minutes</string>
    <string name="_1_hour">1 Hour</string>
    <string name="when_end">When the video ends</string>
    <string name="normal">Normal</string>
    <string name="minus">Minus</string>
    <string name="plus">Plus</string>
    <string name="checked">Checked</string>
    <string name="_00_00">00:00</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="default_web_client_id">979112912285-r4no8q0am2c3ncrnceq3frv4eipmgivj.apps.googleusercontent.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="arrow_right">Arrow Right</string>
    <string name="language">Language</string>
    <string name="system">System</string>
    <string name="theme_mode">Theme Mode</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="auto_follow_system">Auto (Follow System)</string>
    <string name="lang_vietnamese">Vietnamese</string>
    <string name="lang_english">English</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="full_name">Full Name</string>
    <string name="update">Update</string>
    <string name="your_history_is_empty">Your History is Empty</string>
    <string name="looks_like_you_haven_t_watched_any_movies">Looks like you haven\'t watched any movies</string>
    <string name="your_list_is_empty">Your List is Empty</string>
    <string name="it_seems_that_you_haven_t_added_any_anime_to_the_list">It seems that you haven\'t added any anime to the list</string>
    <string name="watching">Watching: %1$d</string>
    <string name="delete">Delete</string>
</resources>