<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/dark_3"
            app:cardCornerRadius="100dp">

            <ImageView
                android:id="@+id/imgAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/avatar"
                android:scaleType="centerCrop"
                android:src="@drawable/profile" />
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/text_16_700"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/not_found"
            android:textColor="?attr/text_color_head_1" />
    </LinearLayout>

    <TextView
        style="@style/text_14_400"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/sorry_the_keyword"
        android:textColor="?attr/text_color_head_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgHeart"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/like"
            android:src="@drawable/heart_bold" />

        <TextView
            android:id="@+id/txtNumberLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            style="@style/text_12_500"
            android:text="@string/_0"
            android:textColor="?attr/text_color_head_1" />

        <TextView
            android:id="@+id/txtTimeAgo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_12_500"
            android:layout_marginStart="24dp"
            android:text="@string/_2_days_ago"
            android:textColor="?attr/text_color_span_700_300" />

        <TextView
            android:id="@+id/txtReply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_12_500"
            android:layout_marginStart="24dp"
            android:text="@string/reply"
            android:textColor="?attr/text_color_span_700_300" />
    </LinearLayout>
</LinearLayout>