<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingHorizontal="32dp"
    android:paddingVertical="40dp"
    android:layout_marginHorizontal="24dp"
    android:background="@drawable/color_dialog_bg"
    android:orientation="vertical">

    <ImageView
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:src="@drawable/block_success"
        android:contentDescription="@string/success" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations"
        android:fontFamily="@font/urbanist_bold"
        android:layout_marginTop="32dp"
        android:textSize="24dp"
        android:textColor="@color/orange"
        tools:ignore="SpUsage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_account_is_ready"
        android:textSize="16dp"
        android:fontFamily="@font/urbanist"
        android:textColor="?attr/text_color_head_1"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        tools:ignore="SpUsage" />

    <com.hin.flixcomix.ui.custom.image_view.SpinImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/spin"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/spin"/>

</LinearLayout>