<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_vertical"
    android:paddingVertical="10dp"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:contentDescription="@string/profile"
        app:tint="?attr/text_color_head_1"
        android:src="@drawable/profile" />

    <TextView
        style="@style/text_18_600"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginStart="20dp"
        android:text="@string/edit_profile"
        android:textColor="?attr/text_color_head_1" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/arrow_right"
        app:tint="?attr/text_color_head_1"
        android:src="@drawable/arrow_right" />
</LinearLayout>