<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/color_background_second"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="12dp"
            android:background="@null"
            android:contentDescription="@string/back"
            android:src="@drawable/arrow_left"
            app:backgroundTint="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/sort"
            android:textColor="?attr/text_color_head_1"
            android:textSize="24dp"
            tools:ignore="SpUsage" />
    </LinearLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_bold"
                android:text="@string/sort_only"
                android:textColor="?attr/text_color_head_2"
                android:textSize="20dp"
                tools:ignore="SpUsage" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_bold"
                android:text="@string/region"
                android:textColor="?attr/text_color_head_2"
                android:textSize="20dp"
                tools:ignore="SpUsage" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRegion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_bold"
                android:text="@string/genre"
                android:textColor="?attr/text_color_head_2"
                android:textSize="20dp"
                tools:ignore="SpUsage" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_bold"
                android:text="@string/year"
                android:textColor="?attr/text_color_head_2"
                android:textSize="20dp"
                tools:ignore="SpUsage" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="24dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/action_drawer_bg"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp"
        android:paddingTop="24dp"
        android:paddingBottom="36dp">

        <Button
            android:id="@+id/btnReset"
            style="@style/ShapeAppearance.Material3.Corner.None"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/button_second_bg"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:backgroundTint="@null"
            tools:ignore="SpUsage" />

        <Button
            android:id="@+id/btnApply"
            style="@style/ShapeAppearance.Material3.Corner.None"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/apply"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:backgroundTint="@null"
            tools:ignore="SpUsage" />
    </LinearLayout>
</LinearLayout>