<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.forgot_password.ForgotPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@null"
            android:contentDescription="@string/back"
            android:src="@drawable/arrow_left"
            app:backgroundTint="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/urbanist_bold"
            android:text="@string/forgot_password"
            android:textColor="?attr/text_color_head_1"
            android:textSize="24dp"
            tools:ignore="SpUsage" />
    </LinearLayout>

    <ImageView
        android:layout_width="250dp"
        android:layout_height="244dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/forgot_password"
        android:src="@drawable/forgot" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/urbanist_medium"
        android:paddingHorizontal="24dp"
        android:text="@string/enter_your_email_to_reset_your_password"
        android:textColor="?attr/text_color_head_1"
        android:textSize="18dp"
        tools:ignore="SpUsage" />

    <EditText
        android:id="@+id/editTxtEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="24dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/selector_edit_text_bg"
        android:drawableStart="@drawable/email_bold"
        android:drawablePadding="12dp"
        android:drawableTint="@color/selector_color_edit_text"
        android:fontFamily="@font/urbanist_semibold"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        android:textColorHint="@color/gray_500"
        android:textSize="14dp"
        tools:ignore="SpUsage" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg"
        android:enabled="false"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/continue_"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:backgroundTint="@null"
        tools:ignore="SpUsage" />


</LinearLayout>