<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="280dp"
    android:background="@drawable/background_bottom_sheet"
    android:orientation="vertical"
    android:paddingHorizontal="24dp">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tint="?attr/color_background_300_dark"/>

    <TextView
        style="@style/text_24_700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="24dp"
        android:text="@string/logout"
        android:textAlignment="center"
        android:textColor="@color/status_error" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_drag_bottom_sheet" />

    <TextView
        style="@style/text_20_700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/are_you_sure_you_want_to_log_out"
        android:textAlignment="center"
        android:textColor="?attr/text_color_head_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            style="@style/text_16_700"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_button_second"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="?attr/text_color_primary_orange"
            app:backgroundTint="@null" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOK"
            style="@style/text_16_700"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@null" />
    </LinearLayout>
</LinearLayout>